Fixed background image on smaller screens

--- a/app/Resources/assets/less/style.less
+++ b/app/Resources/assets/less/style.less
@@ -1,14 +1,20 @@
 body {
   padding-top: 100px;
-  background: url("/img/background.jpg") no-repeat;
-  background-size: 100%;
+  background: url("/img/background.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   font-family: 'Open Sans', sans-serif;
 }
 
 @media only screen and (-webkit-min-device-pixel-ratio: 2) {
   body {
-    background: url("/img/background@2x.jpg") no-repeat;
-    background-size: 100%;
+    background: url("/img/background@2x.jpg") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
   }
 }
 
